# fr8-tools

./: .gitignore  README.md
.github/workflows/: backend.yml  frontend.yml
backend/: .env.example  Dockerfile  pyproject.toml  railway.toml
backend/app/: auth.py  config.py  db.py  main.py  models.py
backend/app/agents/: chart_agent.py  map_agent.py  markdown_agent.py  sql_fixer.py  sql_generator.py
backend/app/rag/: prompts.py  schema.py  utils.py
backend/app/routes/: chat.py  data.py  health.py
backend/app/workflow/: graph.py  state.py
backend/data/: operators.csv  seed.py  terminals.csv  trains.csv
backend/tests/: test_auth.py  test_health.py  test_utils.py
frontend/: package-lock.json  package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/chat/: chat-input.tsx  chat-interface.tsx  message-bubble.tsx
frontend/src/components/ui/: button.tsx
frontend/src/components/viz/: chart-display.tsx  map-display.tsx  map-inner.tsx
frontend/src/hooks/: use-chat.ts
frontend/src/lib/: api.ts  types.ts
